# Student-Management-System-

./: CMakeLists.txt  README.md  StudentData.h  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  deletestudentdialog.cpp  deletestudentdialog.h  deletestudentdialog.ui  displaystudentdialog.cpp  displaystudentdialog.h  displaystudentdialog.ui  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markattendancedialog.cpp  markattendancedialog.h  markattendancedialog.ui  searchbycgpadialog.cpp  searchbycgpadialog.h  searchbycgpadialog.ui  searchbynamedialog.cpp  searchbynamedialog.h  searchbynamedialog.ui  searchbyrolldialog.cpp  searchbyrolldialog.h  searchbyrolldialog.ui  sortbyrolldialog.cpp  sortbyrolldialog.h  sortbyrolldialog.ui  updatestudentdialog.cpp  updatestudentdialog.h  updatestudentdialog.ui
